fix: page imports

--- a/src/content/docs/foundations/standards/comments.mdx
+++ b/src/content/docs/foundations/standards/comments.mdx
@@ -2,14 +2,33 @@
 title: Comments
 ---
 
+import { LinkCard } from "@astrojs/starlight/components";
+
 ### Comment Tags
 
-<Code code="// TODO: Tasks to be tackled later." lang="js" />
-<Code code="// FIXME: Indicates something broken." lang="js" />
-<Code code="// NOTE: Provides general notes or additional context." lang="js" />
-<Code code="// HACK: Marks temporary or unconventional solutions." lang="js" />
-<Code code="// REVIEW: Suggests areas needing a second look." lang="js" />
-<Code code="// OPTIMIZE: Highlights code for optimization." lang="js" />
+```javascript
+// TODO: Tasks to be tackled later.
+```
+
+```javascript
+// FIXME: Indicates something broken.
+```
+
+```javascript
+// NOTE: Provides general notes or additional context.
+```
+
+```javascript
+// HACK: Marks temporary or unconventional solutions.
+```
+
+```javascript
+// REVIEW: Suggests areas needing a second look.
+```
+
+```javascript
+// OPTIMIZE: Highlights code for optimization.
+```
 
 ### Code Comments
 
