--- a/src/content/docs/foundations/version-control/merge_and_pull_requests.mdx
+++ b/src/content/docs/foundations/version-control/merge_and_pull_requests.mdx
@@ -2,6 +2,8 @@
 title: Merge and Pull Requests
 ---
 
+import { Aside } from "@astrojs/starlight/components";
+
 ## What is a Merge/Pull Request?
 
 A Merge Request (MR) or Pull Request (PR) is a method for submitting contributions to a project. When you create a MR/PR, you're asking to merge your changes from one branch into another (usually the main branch). This process facilitates collaboration and ensures that changes are reviewed before being integrated into the main codebase.
