--- a/src/content/docs/foundations/version-control/merge_and_pull_requests.mdx
+++ b/src/content/docs/foundations/version-control/merge_and_pull_requests.mdx
@@ -6,101 +6,101 @@ import { Aside } from "@astrojs/starlight/components";
 
 ## What is a Merge/Pull Request?
 
-A Merge Request (MR) or Pull Request (PR) is a method for submitting contributions to a project. When you create a MR/PR, you're asking to merge your changes from one branch into another (usually the main branch). This process facilitates collaboration and ensures that changes are reviewed before being integrated into the main codebase.
+A Merge Request (MR) or Pull Request (PR) is your way of contributing changes to a project. When you create an MR/PR, you're essentially asking to merge your changes from one branch into another (usually the main branch). This process is key for collaboration, ensuring that your changes are reviewed and approved before they become part of the main codebase.
 
 ## Creating a Merge/Pull Request
 
-Creating a well-structured merge or pull request (MR/PR) is essential for effective collaboration and maintaining code quality. Follow these guidelines to ensure your MR/PR is clear, concise, and easy to review:
+A well-organized merge or pull request is crucial for smooth collaboration and maintaining high code quality. Here’s how to create an effective MR/PR:
 
 ### Steps to Create a Merge/Pull Request
 
-1. **Create Small Merge Requests**: Aim to make your MR/PR as small and focused as possible. Smaller requests are easier to review and less likely to introduce bugs.
-2. **Self-Review and Test Your Code**: Before submitting, thoroughly review your own code and ensure it passes all tests. This reduces the likelihood of errors being caught during the review process.
-3. **Single Commit Title**: If your MR/PR contains a single commit, use the commit message as the title of the MR/PR.
-4. **Multiple Commits Title**: If your MR/PR contains multiple commits, summarize the changes in a concise title that reflects the overall purpose.
-5. **Describe the Purpose**: In the description field, clearly explain the purpose of the MR/PR. What does this change achieve? Why is it necessary?
-6. **Assign Yourself**: Assign the MR/PR to yourself to indicate that you are responsible for its progress.
-7. **Add Reviewers**: Assign one or more team members as reviewers. This ensures that your code will be assessed by someone else before it is merged.
+1. **Keep It Small**: Try to make your MR/PR as focused and small as possible. Smaller requests are easier to review and less likely to cause bugs.
+2. **Review and Test**: Before submitting, thoroughly check your own code and make sure all tests pass. This reduces the chance of errors being caught during the review.
+3. **Single Commit? Use It as the Title**: If your MR/PR has only one commit, use that commit message as the title.
+4. **Multiple Commits? Summarize It**: If your MR/PR has multiple commits, summarize the changes in a clear and concise title.
+5. **Explain the Purpose**: Use the description field to clearly explain what your MR/PR does and why it’s necessary.
+6. **Assign It to Yourself**: Take responsibility for your MR/PR by assigning it to yourself.
+7. **Add Reviewers**: Assign one or more team members as reviewers to ensure your code gets a second pair of eyes before merging.
 
 ### Branch Naming Conventions
 
-Use a consistent naming convention for your branches to make it clear what each branch is for. For example:
+Using consistent branch names helps everyone understand the purpose of each branch. Here are some examples:
 
 - `feature/feature-name` for new features
 - `fix/bug-description` for bug fixes
-- `hotfix/critical-bug` for urgent fixes in the production branch
-
-This helps in easily identifying the purpose of each branch.
+- `hotfix/critical-bug` for urgent fixes that need to go into the production branch quickly
 
 <Aside
   type="danger"
   title="To ensure your code is up to date, please use rebase instead of merge."
 />
 
-To ensure that your branch is up to date with the main branch before merging, use the following commands:
+To make sure your branch is up to date with the latest changes from the main branch, run this command before merging:
 
 ```bash
 git pull --rebase origin main
 ```
 
-If there are new commits to pull, resolve any conflicts, and then push your changes:
+If there are new commits, resolve any conflicts, and push your changes:
 
 ```bash
 git push -f
 ```
 
-This practice ensures that the commit history remains clean, linear, and easy to follow.
+This helps keep the commit history clean and easy to follow.
 
 ### Squashing Commits
 
-Before merging, consider squashing your commits if they represent small, incremental changes to the same feature or fix. Squashing makes the commit history cleaner and easier to follow. You can do this via:
+If your MR/PR includes small, incremental changes to the same feature or fix, consider squashing your commits into one. This makes the commit history cleaner and easier to understand. You can do this with:
 
 ```bash
 git rebase -i HEAD~<number_of_commits>
 ```
 
-Select "squash" for the commits you want to combine.
+Choose "squash" for the commits you want to combine.
 
 ### Handling Merge Conflicts
 
-During the rebase process, you might encounter merge conflicts. Resolve conflicts by manually editing the conflicting files. After resolving, continue the rebase process:
+Sometimes, you might encounter merge conflicts during a rebase. Here’s how to handle them:
 
-```bash
-git add <resolved-file>
-git rebase --continue
-```
+1. **Identify Conflicts**: Run git status to see which files have conflicts.
+2. **Resolve Conflicts**: Open the conflicting files, resolve the conflicts, and save your changes.
+3. **Continue the Rebase**: Once conflicts are resolved, continue the rebase with:
 
-If you're unsure how to resolve a conflict, seek help from a team member or reviewer. Always communicate any significant conflicts that might affect other parts of the project.
+   ```bash
+   git add <resolved-file>
+   git rebase --continue
+   ```
+
+If you're unsure how to resolve a conflict, ask a team member or reviewer for help. Always communicate any significant conflicts that could impact other parts of the project.
 
 ### Final Review Checklist
 
-Before submitting your MR/PR, ensure the following:
+Before you submit your MR/PR, make sure you’ve:
 
-- [ ] Code is clean and free of commented-out code or debugging statements.
-- [ ] All tests pass, and new tests have been added if necessary.
-- [ ] Documentation has been updated to reflect any changes.
-- [ ] Commit messages are clear, concise, and follow the guidelines.
-- [ ] The MR/PR description clearly explains the purpose and impact of the changes.
+- [ ] Cleaned up your code, removing any commented-out code or debugging statements.
+- [ ] Passed all tests and added new ones if needed.
+- [ ] Updated documentation to reflect any changes.
+- [ ] Written clear and concise commit messages.
+- [ ] Clearly explained the purpose and impact of the changes in the MR/PR description.
 
 ## Code Review Process
 
-All pull requests undergo a code review process to ensure code quality, maintainability, and adherence to coding standards.
+Every pull request goes through a code review to ensure it meets the project's standards for quality, maintainability, and style.
 
 ### What to Expect During Code Review
 
-1. Assessment by Git Master or Team Reviewer: A designated reviewer will evaluate your code for functionality, clarity, efficiency, and compliance with coding standards.
-2. Feedback and Suggestions: The reviewer will provide feedback and suggestions for improvement via comments on your pull request. This might include notes on potential bugs, suggestions for refactoring, or questions about your implementation.
-3. Discussion and Revisions: You will have the opportunity to discuss the feedback with the reviewer. Make necessary changes to address any concerns before the code is merged.
+1. **Assessment**: A Git master or team reviewer will assess your code for functionality, clarity, efficiency, and adherence to standards.
+2. **Feedback and Suggestions**: The reviewer will provide comments, which might include identifying bugs, suggesting improvements, or asking questions.
+3. **Discussion and Revisions**: You’ll have the chance to discuss the feedback and make any necessary changes before the code is merged.
 
 ### Tips for a Smooth Code Review
 
-- **Focus on a Single Feature or Bug Fix**: Keep each MR/PR focused on a single feature or bug fix to make the review process more straightforward.
-- **Write Clear Commit Messages**: Use clear and descriptive commit messages that accurately describe the changes made.
-- **Include Documentation and Tests**: If your code changes require updates to documentation or new tests, include these in the MR/PR.
-- **Respond Promptly to Feedback**: Engage with the review process by responding to comments and making necessary changes in a timely manner.
-
-Following these guidelines will help streamline the code review process and ensure that your contributions are integrated smoothly and effectively into the project.
+- **Stay Focused**: Keep your MR/PR focused on a single feature or bug fix to make the review easier.
+- **Clear Commit Messages**: Write clear and descriptive commit messages.
+- **Include Documentation and Tests**: If your changes require updates to documentation or new tests, include them in your MR/PR.
+- **Respond Quickly**: Engage with the review process by responding to feedback and making changes promptly.
 
 ### Linking to Issues
 
-If you are using a [Kanban Boards](kanban.md)], when creating a MR/PR, link it to the relevant issue or ticket in your issue tracker. This helps reviewers understand the context and purpose of your changes. You can do this by referencing the issue number in your MR/PR description or title, e.g., "Fixes #1234".
+If you’re using a [Kanban Board](kanban.md)] or issue tracker, link your MR/PR to the relevant issue. This helps reviewers understand the context and purpose of your changes. You can do this by referencing the issue number in your MR/PR title or description, e.g., "Fixes #1234".
