style: re-style version control pages

--- a/src/content/docs/foundations/version-control/branching.mdx
+++ b/src/content/docs/foundations/version-control/branching.mdx
@@ -42,7 +42,7 @@ git branch <branch_name>
 
 Just replace `<branch_name>` with a descriptive name that follows the guidelines above.
 
-:::note[For Example]
+#### For Example
 
 ```sh
 git branch <nametag/description>
@@ -51,8 +51,6 @@ git branch <nametag/description>
 ```sh
 git branch <nametag/issue_number-description>
 ```
-
-:::
 
 ### Switching to a Branch
 
