--- a/src/content/docs/foundations/version-control/merge_and_pull_requests.mdx
+++ b/src/content/docs/foundations/version-control/merge_and_pull_requests.mdx
@@ -103,4 +103,4 @@ Every pull request goes through a code review to ensure it meets the project's s
 
 ### Linking to Issues
 
-If you’re using a [Kanban Board](kanban.md)] or issue tracker, link your MR/PR to the relevant issue. This helps reviewers understand the context and purpose of your changes. You can do this by referencing the issue number in your MR/PR title or description, e.g., "Fixes #1234".
+If you’re using a [Kanban Board](kanban.md) or issue tracker, link your MR/PR to the relevant issue. This helps reviewers understand the context and purpose of your changes. You can do this by referencing the issue number in your MR/PR title or description, e.g., "Fixes #1234".
