--- a/src/content/docs/foundations/version-control/merging_and_rebasing.mdx
+++ b/src/content/docs/foundations/version-control/merging_and_rebasing.mdx
@@ -41,7 +41,7 @@ Before you wrap up work on a feature branch, make sure it’s up to date with th
    git checkout <branch_name>
    ```
 
-Replace `<branch_name>` with the name of your feature branch.
+   Replace `<branch_name>` with the name of your feature branch.
 
 2. Rebase your branch onto the latest main branch:
 
@@ -140,7 +140,9 @@ To remove a branch from your local machine, use:
 git branch -d <branch_name>
 ```
 
-- Use `-D` if the branch hasn’t been merged and you want to force the deletion.
+:::note
+Use `-D` if the branch hasn’t been merged and you want to force the deletion.
+:::
 
 ### How to Delete a Remote Branch
 
