--- a/src/content/docs/foundations/version-control/getting_started_with_git.mdx
+++ b/src/content/docs/foundations/version-control/getting_started_with_git.mdx
@@ -2,6 +2,8 @@
 title: Getting Started with Git
 ---
 
+import { LinkCard } from "@astrojs/starlight/components";
+
 ## Whats Git?
 
 Alright, let’s talk about **Git**. Git is one of the most popular version control systems out there, and for good reason! It helps you keep track of all the changes you make to your code, and it makes working with others a breeze. With Git, you can save different versions of your project, go back in time if something breaks, and team up with other developers without worrying about messing up each other’s work. Whether you’re a total newbie or have been coding for a while, Git’s got your back.
@@ -21,13 +23,18 @@ Alright, let’s talk about **Git**. Git is one of the most popular version cont
   brew install git
   ```
 
-  :::caution
-  Don’t have Homebrew? No worries—just go to [brew.sh](https://brew.sh/) to get it.
-  :::
-
-  :::tip[Another Option]
-  You can also download Git directly from [Git SCM](https://git-scm.com/download/mac) and follow the installer instructions.
-  :::
+  <LinkCard
+    title="Don't have Homebrew?"
+    description="No worries—just go to brew.sh to get it."
+    href="https://brew.sh/"
+    target="_blank"
+  />
+  <LinkCard
+    title="Another Option"
+    description="You can also download Git directly from Git SCM and follow the installer instructions."
+    href="https://git-scm.com/download/mac"
+    target="_blank"
+  />
 
 ### On Linux
 
@@ -41,9 +48,12 @@ Alright, let’s talk about **Git**. Git is one of the most popular version cont
   This command works for Debian-based systems like Ubuntu. If you’re on something else (like Fedora or Red Hat), use your system’s package manager (`yum`, `dnf`, etc.).
   :::
 
-  :::tip[Another Option]
-  You can always download Git from [Git SCM](https://git-scm.com/download/linux) or use your distro’s package manager.
-  :::
+  <LinkCard
+    title="Another Option"
+    description="You can also download Git directly from Git SCM or use your distro’s package manager."
+    href="https://git-scm.com/download/linux"
+    target="_blank"
+  />
 
 ## Setting Up Git
 
