feat: re-organize code editors documentation

--- a/src/content/docs/code-editors/extensions.mdx
+++ b/src/content/docs/code-editors/extensions.mdx
@@ -2,7 +2,7 @@
 title: VSCode Extensions
 ---
 
-import { Card, LinkCard, CardGrid } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from "@astrojs/starlight/components";
 
 ## Comments and Formatting
 
@@ -60,14 +60,10 @@ import { Card, LinkCard, CardGrid } from "@astrojs/starlight/components";
     href="https://open-vsx.org/extension/rangav/vscode-thunder-client"
     target="_blank"
   />
+  <LinkCard
+    title="Live Server"
+    description="Launch a development local Server with live reload feature for static & dynamic pages"
+    href="https://open-vsx.org/extension/ritwickdey/LiveServer"
+    target="_blank"
+  />
 </CardGrid>
-
-## Settings
-
-We also suggest using the settings stored in this repository
-
-<LinkCard
-  title="VSCode Settings"
-  href="https://gitlab.com/mavonart/settings"
-  target="_blank"
-/>
