--- a/src/content/docs/code-editors/introduction.mdx
+++ b/src/content/docs/code-editors/introduction.mdx
@@ -1,6 +1,8 @@
 ---
-title: "Code Editors: Your New Best Friends"
+title: "Introduction"
 ---
+
+## Code Editors: Your New Best Friends
 
 Alright, let’s talk about code editors. These are your main tools as a developer, and trust me, picking the right one can make your coding life a whole lot easier (and more fun!). Here’s the lowdown on how to choose and use your code editor like a pro.
 
@@ -47,34 +49,3 @@ Alright, let’s talk about code editors. These are your main tools as a develop
 ### Git Integration: Keep Track of Your Code
 
 - **Version control made easy**: If you’re using Git (which you totally should be!), many editors have built-in Git support. This means you can commit, push, pull, and more without ever leaving your editor.
-
-## Popular Code Editors: A Quick Tour
-
-### Visual Studio Code (VS Code)
-
-- **Why it’s awesome**: VS Code is super popular for a reason. It’s free, lightweight, and has a massive library of extensions. Plus, it’s got a great community, so you’ll find plenty of tutorials and tips.
-- **Best for**: Pretty much anything—web development, game development, you name it!
-
-### Sublime Text
-
-- **Why it’s awesome**: Sublime Text is fast, simple, and has a clean interface. It’s perfect if you like something that’s lightweight but still powerful.
-- **Best for**: Quick edits, scripting, and when you want something fast and responsive.
-
-### Atom
-
-- **Why it’s awesome**: Atom is made by GitHub, and it’s fully customizable. It’s great if you like tinkering and want your editor to be just the way you like it.
-- **Best for**: Developers who like to customize their tools and want deep Git integration.
-
-### Notepad++
-
-- **Why it’s awesome**: Notepad++ is super lightweight and great for quick edits or working on simpler projects. It’s a step up from plain old Notepad with some handy coding features.
-- **Best for**: Beginners, quick edits, or when you just need something simple.
-
-### Vim
-
-- **Why it’s awesome**: Vim is a classic. It’s powerful and fast, but it has a steep learning curve. Once you get the hang of it, though, you’ll feel like a coding wizard.
-- **Best for**: Power users who love keyboard shortcuts and want ultimate control.
-
-## Conclusion: Find What Works for You
-
-The best code editor is the one that feels right for you. Don’t be afraid to try a few out and see what clicks. Once you find your match, set it up so it feels like home. Happy coding!
