feat: add adjustments to principles documentation

--- a/src/content/docs/foundations/principles/advanced_concepts_and_considerations.mdx
+++ b/src/content/docs/foundations/principles/advanced_concepts_and_considerations.mdx
@@ -2,95 +2,93 @@
 title: Advanced Concepts and Considerations
 ---
 
-As software systems grow in complexity, developers must consider advanced concepts to ensure their applications remain secure, user-friendly, and adaptable. This section explores key considerations such as security, empathy-driven development, and memory management, which are crucial for both web and game development.
+As software projects grow, they get more complicated, and developers need to think about some advanced topics to keep things running smoothly. This section dives into important areas like security, user-centered design, and memory management—key factors for both web and game development.
 
 ## Security
 
-Security is a critical aspect of software development, focusing on protecting applications from vulnerabilities and attacks. Implementing robust security measures is essential to safeguard user data and maintain trust.
+Security is a big deal in software development. It’s all about keeping your app safe from hacks and other nasties. Strong security keeps user data safe and builds trust with your users.
 
-- **Implement security measures to protect your software from vulnerabilities.**
+- **Protect Your Software**: Make sure your app isn’t full of holes that attackers can exploit.
 
-  - **Web Example**: Use HTTPS to encrypt data transmitted between the client and server.
-  - **Game Example**: Validate and sanitize user input to prevent injection attacks.
+  - **Web Example**: Use HTTPS to encrypt data between the client and server.
+  - **Game Example**: Always validate and sanitize user input to prevent hacks.
 
-  - **Web Use Case**: Implement Content Security Policy (CSP) to prevent cross-site scripting (XSS) attacks.
-  - **Game Use Case**: Use secure communication protocols for multiplayer games to prevent cheating and data tampering.
+- **Real-Life Use Cases**:
+  - **Web**: Implement Content Security Policy (CSP) to block cross-site scripting (XSS) attacks.
+  - **Games**: Use secure protocols in multiplayer games to stop cheating and data tampering.
 
 ## Empathy-Driven Development
 
-Empathy-driven development involves understanding the needs and perspectives of end-users, team members, and stakeholders. By prioritizing user experience, developers can create more intuitive and effective software.
+Empathy-driven development means putting yourself in the shoes of users, team members, and stakeholders. When you focus on understanding their needs, you create software that’s not just functional, but a joy to use.
 
-- **Consider the perspectives and needs of end-users, team members, and stakeholders to create user-friendly software.**
+- **Think About Others**: Consider what your users and team members need.
 
-  - **Example**: Conduct user testing sessions to gather feedback on a game's interface and controls.
+  - **Example**: Run user testing sessions to see how players interact with a game’s interface and controls.
 
-  - **Web Use Case**: Design accessible web applications that accommodate users with disabilities.
-  - **Game Use Case**: Implement customizable controls and difficulty settings to enhance player experience.
+- **Real-Life Use Cases**:
+  - **Web**: Design web apps that are accessible to users with disabilities.
+  - **Games**: Allow players to customize controls and difficulty settings to enhance their experience.
 
 ## Simplicity & Flexibility
 
-Simplicity and flexibility are key design principles that help developers create software that is easy to understand, maintain, and extend. By keeping designs simple, developers can more easily adapt to future changes.
+Keeping things simple makes your code easier to work with, while designing for flexibility allows your software to grow and adapt without breaking.
 
-- **Strive for simplicity in design and implementation for easier understanding and maintenance.**
+- **Keep It Simple**: Simple designs are easier to understand and maintain.
 
-  - **Example**: Use clear and concise code structures to avoid unnecessary complexity.
+  - **Example**: Write clear, concise code that avoids unnecessary complexity.
 
-- **Design systems with flexibility in mind to accommodate future changes.**
+- **Stay Flexible**: Design your systems so they can adapt to future changes.
 
-  - **Example**: Use modular design patterns to allow easy integration of new features.
+  - **Example**: Use modular design patterns so you can easily add new features later.
 
-  - **Web Use Case**: Use responsive design to ensure web applications work on a variety of devices and screen sizes.
-  - **Game Use Case**: Implement a plugin system to allow easy addition of new game features or content.
+- **Real-Life Use Cases**:
+  - **Web**: Use responsive design to ensure your app works well on all devices.
+  - **Games**: Implement a plugin system so you can easily add new game features or content.
 
 ## Maintain a Balance
 
-Maintaining a balance between over-engineering and under-engineering ensures that software is neither too complex nor too simplistic. This balance helps developers create solutions that are fit for purpose without unnecessary overhead.
+It’s important to strike the right balance between over-engineering and under-engineering. You want your software to be robust enough to handle what’s needed without being bloated with unnecessary features.
 
-- **Balance between over-engineering and under-engineering to ensure the software is appropriately complex.**
+- **Find the Sweet Spot**: Don’t make your software more complex than it needs to be, but also don’t oversimplify.
 
-  - **Example**: Evaluate the necessity of a feature before implementing it to avoid adding unnecessary complexity.
+  - **Example**: Think twice before adding a feature—does it really add value?
 
-  - **Web Use Case**: Avoid adding unnecessary libraries or frameworks that increase the complexity of a web application.
-  - **Game Use Case**: Focus on core gameplay mechanics before adding advanced features or graphics.
+- **Real-Life Use Cases**:
+  - **Web**: Avoid adding too many libraries or frameworks that make your app harder to maintain.
+  - **Games**: Focus on core gameplay before getting fancy with extra features or graphics.
 
 ## Data-Driven Design
 
-Data-driven design involves using data to inform decisions about software behavior and structure. This approach allows developers to separate logic from content, making it easier to update and adjust applications.
+Data-driven design means using data to guide how your software behaves and is structured. This makes it easier to tweak and update your app without diving into the code.
 
-- **Use data-driven approaches to separate game logic from content, allowing easier adjustments.**
+- **Let Data Guide You**: Separate logic from content so you can adjust things more easily.
 
-  - **Example (Game)**: Use JSON files to define game levels and configurations, allowing designers to modify content without changing code.
+  - **Example**: Use JSON files for game levels so designers can tweak things without touching the code.
 
-  - **Web Use Case**: Use a CMS (Content Management System) to manage web content independently from the application logic.
-  - **Game Use Case**: Store game settings and configurations in external files to allow for easy updates and localization.
+- **Real-Life Use Cases**:
+  - **Web**: Use a CMS (Content Management System) to manage content without messing with the app’s logic.
+  - **Games**: Store game settings in external files for easy updates and localization.
 
 ## Event-Driven Programming
 
-Event-driven programming is a paradigm where the flow of the program is determined by events such as user actions or sensor outputs. This approach is particularly useful in interactive applications like games.
+Event-driven programming is all about making your app respond to things like user actions or other triggers. This approach is especially useful in interactive apps like games.
 
-- **Utilize event-driven programming patterns to handle game events efficiently.**
+- **React to Events**: Use event-driven patterns to handle things efficiently.
 
-  - **Example**: Use event listeners in JavaScript to respond to user interactions, such as clicks or key presses.
+  - **Example**: Use JavaScript event listeners to respond to clicks, key presses, or other user interactions.
 
-  - **Web Use Case**: Use JavaScript event listeners to handle user interactions on a webpage, such as form submissions or button clicks.
-  - **Game Use Case**: Implement an event system to manage in-game events like player actions and environmental changes.
+- **Real-Life Use Cases**:
+  - **Web**: Use JavaScript to handle user interactions, like form submissions or button clicks.
+  - **Games**: Implement an event system to manage in-game actions like player moves or environmental changes.
 
 ## Memory Management
 
-Effective memory management is crucial for ensuring that applications run smoothly without memory leaks or performance degradation. Developers must carefully manage resources, especially in resource-intensive applications like games.
+Good memory management keeps your app running smoothly by preventing memory leaks and avoiding performance issues. This is especially important in resource-heavy applications like games.
 
-- **Focus on effective memory management to prevent leaks and ensure smooth performance.**
+- **Manage Memory Wisely**: Keep an eye on memory usage to avoid slowdowns or crashes.
 
-  - **Example (Game)**: Use object pooling to reuse objects and reduce memory allocation overhead.
+  - **Example**: Use object pooling in games to reuse objects and reduce the overhead of memory allocation.
 
-  - **Web Use Case**: Optimize image loading and caching strategies to reduce memory usage in web applications.
-  - **Game Use Case**: Implement memory profiling tools to identify and address memory leaks in game engines.
-
-## Glossary of Terms
-
-- **Vulnerability**: A weakness in a system that can be exploited to compromise security.
-- **User Testing**: A process where real users interact with software to identify usability issues.
-- **Modular Design**: A design approach that divides a system into smaller parts (modules) that can be independently created and then used in different systems.
-- **JSON (JavaScript Object Notation)**: A lightweight data interchange format that is easy for humans to read and write and easy for machines to parse and generate.
-- **Event Listener**: A procedure in JavaScript that waits for an event to occur and then executes a specified function.
-- **Object Pooling**: A design pattern that involves reusing objects from a pool rather than creating and destroying them repeatedly, to improve performance.
+- **Real-Life Use Cases**:
+  - **Web**: Optimize image loading and caching to reduce memory usage.
+  - **Games**: Use memory profiling tools to find and fix memory leaks in your game engine.
