--- a/src/content/docs/foundations/principles/introduction_and_core_principles.mdx
+++ b/src/content/docs/foundations/principles/introduction_and_core_principles.mdx
@@ -2,31 +2,35 @@
 title: Introduction and Core Principles
 ---
 
-Software development principles are guidelines that help developers create efficient, maintainable, and scalable code. By following these principles, developers can produce software that is easier to understand, modify, and extend, ultimately leading to more successful projects. This document introduces three core principles: KISS, DRY, and YAGNI, which are foundational to good software design.
+import { Card } from "@astrojs/starlight/components";
+
+When you're writing software, sticking to some tried-and-true principles can make your life (and your code) a lot easier. These principles help you write code that's clean, easy to maintain, and simple to build on. In this guide, we’ll go over three big ones: KISS, DRY, and YAGNI. Understanding and using these will help you avoid common pitfalls and keep your projects running smoothly.
 
 ## KISS (Keep It Simple, Stupid)
 
-The KISS principle emphasizes simplicity in design and implementation. By keeping things simple, developers can create code that is easier to understand and maintain.
+KISS is all about simplicity. The idea is to keep your code as straightforward as possible, making it easier to read, understand, and fix when things go wrong.
 
-- Use clear and descriptive names for variables and functions.
+### Tips for Keeping It Simple
+
+- **Use Clear Names**: Give your variables and functions names that make sense at a glance.
 
   ```javascript
-  // Bad
+  // Not so great
   let x = 10;
 
-  // Good
+  // Much better
   let playerScore = 10;
   ```
 
-- Keep lines of code short for better readability.
+- **Break Up Complex Logic**: Simplify your code by breaking down complex conditions.
 
   ```javascript
-  // Bad
+  // Messy and hard to read
   if (playerScore > 50 && playerLives > 0 && levelCompleted) {
     /* ... */
   }
 
-  // Good
+  // Cleaner and easier to follow
   const hasEnoughScore = playerScore > 50;
   const isPlayerAlive = playerLives > 0;
 
@@ -35,13 +39,13 @@ The KISS principle emphasizes simplicity in design and implementation. By keepin
   }
   ```
 
-- Write user-facing text that is easy to understand and manage.
+- **Use Meaningful Messages**: When something goes wrong, show helpful error messages.
 
   ```javascript
-  // Bad
+  // Vague and unhelpful
   alert("Err!");
 
-  // Good
+  // Clear and user-friendly
   const MESSAGES = {
     error: "An error occurred. Please try again.",
   };
@@ -49,10 +53,10 @@ The KISS principle emphasizes simplicity in design and implementation. By keepin
   alert(MESSAGES.error);
   ```
 
-- Avoid complex and deeply nested code structures.
+- **Avoid Deep Nesting**: Too many nested conditions make your code hard to follow. Keep it flat and easy to read.
 
   ```javascript
-  // Bad
+  // Too much going on here
   function processGame() {
     if (gameStarted) {
       if (playerLives > 0) {
@@ -63,7 +67,7 @@ The KISS principle emphasizes simplicity in design and implementation. By keepin
     }
   }
 
-  // Good
+  // Simple and to the point
   function processGame() {
     if (!gameStarted || playerLives <= 0) return;
 
@@ -73,17 +77,17 @@ The KISS principle emphasizes simplicity in design and implementation. By keepin
   }
   ```
 
-- Handle errors consistently to make debugging easier.
+- **Handle Errors Consistently**: Make sure you log errors in a way that’s consistent and easy to debug.
 
   ```javascript
-  // Bad
+  // Not ideal
   try {
     // code that may throw
   } catch (e) {
     console.log(e);
   }
 
-  // Good
+  // Better approach
   try {
     // code that may throw
   } catch (error) {
@@ -91,16 +95,16 @@ The KISS principle emphasizes simplicity in design and implementation. By keepin
   }
   ```
 
-- Use comments wisely; avoid writing too many unnecessary comments.
+- **Comment Smartly**: Only add comments where they really help. Don’t state the obvious.
 
   ```javascript
-  // Bad
+  // Over-explaining
   // This function adds two numbers
   function add(a, b) {
     return a + b;
   }
 
-  // Good
+  // Useful comment
   // Calculate the player's new score after bonus
   function calculateNewScore(currentScore, bonus) {
     return currentScore + bonus;
@@ -109,12 +113,11 @@ The KISS principle emphasizes simplicity in design and implementation. By keepin
 
 ## DRY (Don’t Repeat Yourself)
 
-The DRY principle encourages code reuse and the elimination of redundancy. By avoiding repetition, developers can reduce the risk of inconsistencies and make the codebase easier to maintain.
+DRY is all about avoiding repetition in your code. If you’re writing the same thing over and over, it’s time to step back and simplify. This reduces errors and makes updates easier.
 
-- Keep files short and focused to make them easier to read.
+- **Modularize Your Code**: Break your code into smaller, reusable pieces.
 
   ```javascript
-  // Separate game logic into different files/modules
   // player.js
   export function createPlayer(name) {
     /* ... */
@@ -124,18 +127,20 @@ The DRY principle encourages code reuse and the elimination of redundancy. By av
   import { createPlayer } from "./player.js";
   ```
 
-- Declare constants at the beginning of your code for easy access and modification.
+- **Declare Constants Upfront**: Define constants at the start so you can easily tweak them later.
 
   ```javascript
   const MAX_PLAYERS = 4;
   const GAME_SPEED = 1.5;
   ```
 
-- Follow a consistent coding style to ensure uniformity and readability.
-  :::note
+- **Follow a Consistent Style**: Stick to a coding style guide so everything looks uniform.
+
+  :::tip
   Use a linter like ESLint to enforce coding standards
   :::
-- Use default parameters to avoid repetitive code.
+
+- **Use Default Parameters**: Simplify your functions by using default parameters.
 
   ```javascript
   function startGame(level = 1, difficulty = "easy") {
@@ -143,35 +148,32 @@ The DRY principle encourages code reuse and the elimination of redundancy. By av
   }
   ```
 
-- Replace "magic numbers" with named constants for clarity.
+- **Avoid Magic Numbers**: Replace hard-coded numbers with named constants.
 
   ```javascript
-  // Bad
+  // Not clear
   if (playerLives === 3) {
     /* ... */
   }
 
-  // Good
+  // Clearer
   const MAX_LIVES = 3;
   if (playerLives === MAX_LIVES) {
     /* ... */
   }
   ```
 
-- Remove unused code to keep the codebase clean.
+- **Clean Up**: Get rid of any code you’re not using to keep things tidy.
 
 ## YAGNI (You Aren’t Gonna Need It)
 
-The YAGNI principle advises against implementing features until they are necessary. This helps prevent unnecessary complexity and keeps the codebase focused on current requirements.
+YAGNI is about not overthinking things. Don’t add features or code until you actually need them. This keeps your project focused and manageable.
 
-- Add features only when they are necessary to avoid unnecessary complexity.
-  Focus on core features first, like player movement and collision detection, before adding advanced AI
+Tips for Practicing YAGNI
 
-## Glossary of Terms
+- **Build What’s Needed**: Focus on what the project needs right now, not what it might need later.
 
-- **Variable**: A storage location identified by a memory address and a symbolic name (an identifier), which contains some known or unknown quantity of information referred to as a value.
-- **Function**: A block of organized, reusable code that is used to perform a single, related action.
-- **Constant**: A value that cannot be altered by the program during normal execution.
-- **Linter**: A tool that analyzes source code to flag programming errors, bugs, stylistic errors, and suspicious constructs.
-- **Magic Number**: A unique value with unexplained meaning or multiple occurrences which could (preferably) be replaced with a named constant.
-- **Refactor**: The process of restructuring existing computer code without changing its external behavior.
+  <Card title="Example">
+    Before diving into advanced AI, make sure you’ve got the basics like player
+    movement and collision detection down.
+  </Card>
