style: small adjustment to branching

--- a/src/content/docs/foundations/version-control/branching.mdx
+++ b/src/content/docs/foundations/version-control/branching.mdx
@@ -42,7 +42,7 @@ git branch <branch_name>
 
 Just replace `<branch_name>` with a descriptive name that follows the guidelines above.
 
-#### For Example
+#### Examples
 
 ```sh
 git branch <nametag/description>
